############################################################################################################


For more details, please see the README file.


	- Add of the "-tx" option to report either NM or ENST transcripts (NCBI or ENSEMBL) 
	  => Rename the transcript feature from "NM" to "tx"
	  => Rename the genes directory from "RefGene" to "Genes"

July 05, 2020: AnnotSV version 2.3.3
	- Update of the annotations (cf the "Versions of the annotations sources" section of the README)
	- Use of the “bcftools” toolset (Li, 2011) to fix a bug with multiallelic sites from VCF input file(s)
	- Add of the "Samples_ID" feature (report of the sample names for which the SV was called)
	- Include the new "-externalGeneFiles" option to pass external gene file(s) path in the command line
	- Integration of 4 Tcl packages (http/tar/csv/json) in the AnnotSV distribution
	- "1000g_AF" and "1000g_max_AF" features are not reported anymore
	- Add bugfix with gzipped VCF files as input
	- Fix the output columns order - whatever the machines
	- Add bugfix concerning the running of bash scripts (illegal use of | or |& in command)
	- Add bugfix concerning the use of the "-snvIndelFiles" and "-candidateSnvIndelSamples" options
	- Add bugfix for the exomiser use
	- Add bugfix concerning the AnnotSV installation when PREFIX is not the current directory
	- Add bugfix concerning the use of a big "candidateGenesFile"

Dec 20, 2019: AnnotSV version 2.3
	- Include phenotype-driven annotations (HPO), based on Exomiser (Smedley et al., 2015)
	- Include the lift-over GRCh38 gnomAD SV frequency annotation
	- Include the "-annotationsDir" option to pass the annotations directory to AnnotSV at run time
	- New "AnnotSV ID" settings (to ensure unique SV identifiers)
	- Deletion filtering improvement
	- Integration of the gnomAD frequency data in the ranking
	- AnnotSV can now create two other output files:
		- A report of unannotated variants (e.g. badly formatted SV, variant length < SVminSize...)